Make small reformatting changes and add comments

--- a/source/templates/snapshot.html
+++ b/source/templates/snapshot.html
@@ -12,6 +12,6 @@
 
  	<body class="text-center">
 		<img id="capture" src="/eye">
-		<script src="{{ url_for('static', filename='core.js') }}"></script>
+		<script src="{{ url_for('static', filename='capture.js') }}"></script>
 	</body>
 </html>
