--- a/source/templates/snapshot.html
+++ b/source/templates/snapshot.html
@@ -11,7 +11,12 @@
  	</head>
 
  	<body class="text-center">
-		<img id="capture" src="/eye">
-		<script src="{{ url_for('static', filename='capture.js') }}"></script>
+		<div class="cover-container d-flex w-100 h-10 p-3 mx-auto flex-column">
+			<p class="capture_instruct">Press space to take the photo</p>
+			<div class="">
+				<img id="capture" src="/eye">
+			</div>
+			<script src="{{ url_for('static', filename='capture.js') }}"></script>
+		</div>
 	</body>
 </html>
