--- a/source/templates/show.html
+++ b/source/templates/show.html
@@ -13,7 +13,7 @@
  	<body class="text-center">
    	<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 			<main role="main" class="inner cover mt-auto">
-				<img id="marker" class="mb-3" src="{{ url_for('static', filename=captured_img) }}">
+				<img id="marker" class="mb-3" src="{{ captured_img }}">
 				<p class="lead mb-5">Right click on the image to save it.</p>
         <a href="/snapshot" class="cover button">Retake photo</a>
         <a href="/" class="cover button">Return to home</a>
