--- a/source/templates/marker.html
+++ b/source/templates/marker.html
@@ -14,8 +14,9 @@
    	<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 			<main role="main" class="inner cover mt-auto">
 				<img id="marker" class="mb-3" src="{{ url_for('static', filename=randmarker) }}">
+				<br><br>
 				<p class="lead mb-5">First take photo of this marker, then hold it up when taking the photo to indicate where your friend should be placed.</p>
-				<a href="/snapshot" class="cover button">I'm Ready to Take a Picture!</a>
+				<a href="/snapshot" class="cover button">📷 I'm Ready to Take a Picture!</a>
 			</main>
 
 			<footer class="mastfoot mt-auto">
