--- a/source/templates/show.html
+++ b/source/templates/show.html
@@ -15,7 +15,7 @@
 			<main role="main" class="inner cover mt-auto">
 				<img id="captured_image" class="mb-3" src="{{ captured_img }}">
 				<p class="lead mb-5">🖱 Right click on the image to save it️</p>
-        		<a href="/" class="cover button">Return to home</a>
+        		<a href="/" class="cover button">🏠 Return to home</a>
 			</main>
 
 			<footer class="mastfoot mt-auto">
