--- a/source/templates/snapshot.html
+++ b/source/templates/snapshot.html
@@ -12,7 +12,7 @@
 
  	<body class="text-center">
 		<div class="cover-container d-flex w-100 h-10 p-3 mx-auto flex-column">
-			<p class="capture_instruct">Press space to take the photo</p>
+			<p class="capture_instruct">⬇️ Press space to take the photo</p>
 			<div class="">
 				<img id="capture" src="/eye">
 			</div>
